--- a/arch/arm64/configs/SD_defconfig
+++ b/arch/arm64/configs/SD_defconfig
@@ -846,7 +846,7 @@ CONFIG_NETWORK_SECMARK=y
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
-CONFIG_BRIDGE_NETFILTER=m
+CONFIG_BRIDGE_NETFILTER=y
 
 #
 # Core Netfilter Configuration
@@ -1975,7 +1975,7 @@ CONFIG_WLAN_VENDOR_ATH=y
 # CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS is not set
 # CONFIG_ATH5K_PCI is not set
 # CONFIG_ATH6KL is not set
-CONFIG_WIL6210=m
+CONFIG_WIL6210=y
 CONFIG_WIL6210_ISR_COR=y
 CONFIG_WIL6210_TRACING=y
 CONFIG_WIL6210_PLATFORM_MSM=y
@@ -2323,7 +2323,7 @@ CONFIG_DIAG_OVER_USB=y
 CONFIG_DIAGFWD_BRIDGE_CODE=y
 CONFIG_MSM_FASTCVPD=y
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
+CONFIG_MSM_RDBG=y
 # CONFIG_OKL4_PIPE is not set
 CONFIG_VSERVICES_SERIAL=y
 CONFIG_VSERVICES_SERIAL_SERVER=y
@@ -2973,7 +2973,7 @@ CONFIG_IR_SHARP_DECODER=y
 CONFIG_IR_MCE_KBD_DECODER=y
 CONFIG_IR_XMP_DECODER=y
 # CONFIG_RC_DEVICES is not set
-CONFIG_IR_MSM_GENI=m
+CONFIG_IR_MSM_GENI=y
 CONFIG_MEDIA_SUPPORT=y
 
 #
@@ -3013,7 +3013,7 @@ CONFIG_MEDIA_USB_SUPPORT=y
 #
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
-CONFIG_USB_GSPCA=m
+CONFIG_USB_GSPCA=y
 # CONFIG_USB_M5602 is not set
 # CONFIG_USB_STV06XX is not set
 # CONFIG_USB_GL860 is not set
@@ -3110,15 +3110,15 @@ CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 CONFIG_MSM_NPU=y
-CONFIG_DVB_MPQ=m
+CONFIG_DVB_MPQ=y
 
 #
 # Qualcomm Technologies, Inc. Demux device config
 #
-CONFIG_DVB_MPQ_DEMUX=m
+CONFIG_DVB_MPQ_DEMUX=y
 CONFIG_DVB_MPQ_NUM_DMX_DEVICES=4
 CONFIG_DVB_MPQ_TSPP1=y
-CONFIG_TSPP=m
+CONFIG_TSPP=y
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_V4L_TEST_DRIVERS is not set
 # CONFIG_DVB_PLATFORM_DRIVERS is not set
@@ -3421,7 +3421,7 @@ CONFIG_FB_ARMCLCD=y
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_FB_SM712 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
-CONFIG_LCD_CLASS_DEVICE=m
+CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
 # CONFIG_LCD_LMS283GF05 is not set
 # CONFIG_LCD_LTV350QV is not set
@@ -4525,7 +4525,7 @@ CONFIG_RMNET_IPA3=y
 CONFIG_RNDIS_IPA=y
 CONFIG_IPA3_MHI_PROXY=y
 CONFIG_IPA_UT=y
-CONFIG_MSM_11AD=m
+CONFIG_MSM_11AD=y
 CONFIG_SEEMP_CORE=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
@@ -4707,7 +4707,7 @@ CONFIG_QCOM_SM8150_LLCC=y
 # CONFIG_QCOM_SM6150_LLCC is not set
 # CONFIG_QCOM_SDMMAGPIE_LLCC is not set
 # CONFIG_QCOM_LLCC_AMON is not set
-CONFIG_QCOM_LLCC_PERFMON=m
+CONFIG_QCOM_LLCC_PERFMON=y
 CONFIG_QCOM_QMI_HELPERS=y
 CONFIG_QCOM_QMI_RMNET=y
 CONFIG_QCOM_QMI_DFC=y
