Configs: Enable crypto sha 512
Signed-off-by: HolyAngel <slverwolf@gmail.com>

--- a/arch/arm64/configs/SD_defconfig
+++ b/arch/arm64/configs/SD_defconfig
@@ -5927,7 +5927,7 @@ CONFIG_CRYPTO_DEV_QCOM_ICE=y
 # CONFIG_SYSTEM_BLACKLIST_KEYRING is not set
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA256_ARM64=y
-# CONFIG_CRYPTO_SHA512_ARM64 is not set
+CONFIG_CRYPTO_SHA512_ARM64=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_GHASH_ARM64_CE=y
