configs: Enable Maple IO as default IO
Signed-off-by: HolyAngel <slverwolf@gmail.com>

--- a/arch/arm64/configs/SD_defconfig
+++ b/arch/arm64/configs/SD_defconfig
@@ -369,13 +369,15 @@ CONFIG_BLK_MQ_PCI=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_MAPLE=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="maple"
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
 # CONFIG_IOSCHED_BFQ is not set
