configs: Enable Wake Gestures

--- a/arch/arm64/configs/SD_defconfig
+++ b/arch/arm64/configs/SD_defconfig
@@ -2190,6 +2190,7 @@ CONFIG_TOUCHPANEL_SYNAPTICS_S3706=y
 # CONFIG_TOUCHPANEL_SYNAPTICS_S1302 is not set
 CONFIG_TOUCHPANEL_SAMSUNG_S6SY761=y
 CONFIG_TOUCHPANEL_ST_FST1BA90A=y
+CONFIG_WAKE_GESTURES=y
 CONFIG_INPUT_FINGERPRINT=y
 CONFIG_FINGERPRINT_DETECT=y
 # CONFIG_FINGERPRINT_FPC is not set
