Optimize temperature region charge termination current
Change-Id: I3dc7cbc4433fe666e66d989cbec47402775a44a0

--- a/arch/arm64/boot/dts/qcom/guacamoleb.dtsi
+++ b/arch/arm64/boot/dts/qcom/guacamoleb.dtsi
@@ -362,6 +362,7 @@
 	ibatmax-cool-thr-ma = <1000>;
 	ibatmax-cool-ma = <1450>;
 	ibatmax-warm-ma = <1050>;
+	op,little_cold_term_current = <250>;
 };
 
 &mtp_batterydata {
