--- a/arch/arm64/configs/stock_defconfig
+++ b/arch/arm64/configs/stock_defconfig
@@ -500,7 +500,7 @@ CONFIG_ARM64_ERRATUM_832075=y
 CONFIG_ARM64_ERRATUM_845719=y
 CONFIG_ARM64_ERRATUM_843419=y
 CONFIG_ARM64_ERRATUM_1024718=y
-CONFIG_ARM64_ERRATUM_1286807=y
+# CONFIG_ARM64_ERRATUM_1286807 is not set
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
 CONFIG_CAVIUM_ERRATUM_27456=y
@@ -2925,6 +2925,7 @@ CONFIG_REGULATOR_PROXY_CONSUMER=y
 # CONFIG_REGULATOR_PV88090 is not set
 # CONFIG_REGULATOR_PWM is not set
 # CONFIG_REGULATOR_QCOM_SPMI is not set
+CONFIG_REGULATOR_QPNP_AMOLED=y
 # CONFIG_REGULATOR_QPNP_LABIBB is not set
 CONFIG_REGULATOR_QPNP_LCDB=y
 # CONFIG_REGULATOR_QPNP_OLEDB is not set
@@ -4044,7 +4045,7 @@ CONFIG_MMC_BLOCK=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=y
+CONFIG_MMC_TEST=m
 # CONFIG_MMC_RING_BUFFER is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 CONFIG_MMC_PARANOID_SD_INIT=y
@@ -5605,7 +5606,8 @@ CONFIG_RING_BUFFER=y
 CONFIG_EVENT_TRACING=y
 CONFIG_CONTEXT_SWITCH_TRACER=y
 CONFIG_IPC_LOGGING=y
-# CONFIG_QCOM_RTB is not set
+CONFIG_QCOM_RTB=y
+CONFIG_QCOM_RTB_SEPARATE_CPUS=y
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
 CONFIG_TRACING_SUPPORT=y
