Adjust VPH track voltage when lcd on
Change-Id: I839fc38086a2bc920b5cd53ea352981ccc01235c

--- a/arch/arm64/boot/dts/qcom/guacamoleb.dtsi
+++ b/arch/arm64/boot/dts/qcom/guacamoleb.dtsi
@@ -363,6 +363,7 @@
 	ibatmax-cool-ma = <1450>;
 	ibatmax-warm-ma = <1050>;
 	op,little_cold_term_current = <250>;
+	vph-sel-disable;
 };
 
 &mtp_batterydata {
