--- a/arch/arm64/configs/SD_defconfig
+++ b/arch/arm64/configs/SD_defconfig
@@ -6030,3 +6030,79 @@ CONFIG_STACKDEPOT=y
 CONFIG_STACK_HASH_ORDER_SHIFT=12
 CONFIG_SBITMAP=y
 # CONFIG_STRING_SELFTEST is not set
+# CONFIG_AFE_HWDEP is not set
+CONFIG_AUDIO_EXT_CLK=y
+CONFIG_DOLBY_DS2=y
+CONFIG_DOLBY_LICENSE=y
+CONFIG_DTS_EAGLE=y
+CONFIG_DTS_SRS_TM=y
+CONFIG_MSM_ADSP_LOADER=y
+CONFIG_MSM_AVTIMER=y
+CONFIG_MSM_CDC_PINCTRL=y
+CONFIG_MSM_GLINK_SPI_XPRT=y
+# CONFIG_MSM_MDF is not set
+# CONFIG_MSM_QDSP6_APRV2_GLINK is not set
+CONFIG_MSM_QDSP6_APRV2_RPMSG=y
+# CONFIG_MSM_QDSP6_APRV3_GLINK is not set
+CONFIG_MSM_QDSP6_NOTIFIER=y
+CONFIG_MSM_QDSP6_PDR=y
+CONFIG_MSM_QDSP6_SSR=y
+CONFIG_MSM_QDSP6V2_CODECS=y
+CONFIG_MSM_ULTRASOUND=y
+# CONFIG_PINCTRL_LPI is not set
+CONFIG_PINCTRL_WCD=y
+CONFIG_QTI_PP=y
+CONFIG_REGMAP_SWR=y
+# CONFIG_RX_MACRO is not set
+# CONFIG_SND_EVENT is not set
+CONFIG_SND_HWDEP_ROUTING=y
+# CONFIG_SND_SOC_ANALOG_CDC is not set
+# CONFIG_SND_SOC_BOLERO is not set
+# CONFIG_SND_SOC_CPE is not set
+# CONFIG_SND_SOC_CSRA66X0 is not set
+# CONFIG_SND_SOC_DIGITAL_CDC is not set
+# CONFIG_SND_SOC_EP92 is not set
+# CONFIG_SND_SOC_EXT_CODEC is not set
+# CONFIG_SND_SOC_INT_CODEC is not set
+# CONFIG_SND_SOC_MACHINE_SDXPOORWILLS is not set
+CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
+CONFIG_SND_SOC_MSM_HOSTLESS_PCM=y
+CONFIG_SND_SOC_MSM_QDSP6V2_INTF=y
+# CONFIG_SND_SOC_MSM_SDW is not set
+CONFIG_SND_SOC_MSM_STUB=y
+# CONFIG_SND_SOC_POORWILLS is not set
+# CONFIG_SND_SOC_QCS405 is not set
+CONFIG_SND_SOC_QDSP6V2=y
+# CONFIG_SND_SOC_SDM660_CDC is not set
+# CONFIG_SND_SOC_SDM670 is not set
+# CONFIG_SND_SOC_SDM845 is not set
+# CONFIG_SND_SOC_SM6150 is not set
+CONFIG_SND_SOC_SM8150=y
+CONFIG_SND_SOC_TFA9874_FOR_DAVI=y
+CONFIG_SND_SOC_TFA9874_OR_HAPTIC=y
+CONFIG_SND_SOC_TFA9894=y
+# CONFIG_SND_SOC_WCD9335 is not set
+CONFIG_SND_SOC_WCD934X=y
+CONFIG_SND_SOC_WCD934X_DSD=y
+CONFIG_SND_SOC_WCD934X_MBHC=y
+CONFIG_SND_SOC_WCD9360=y
+# CONFIG_SND_SOC_WCD937X is not set
+# CONFIG_SND_SOC_WCD937X_SLAVE is not set
+CONFIG_SND_SOC_WCD9XXX_V2=y
+CONFIG_SND_SOC_WCD_CPE=y
+CONFIG_SND_SOC_WCD_DSP_MGR=y
+# CONFIG_SND_SOC_WCD_IRQ is not set
+CONFIG_SND_SOC_WCD_MBHC=y
+CONFIG_SND_SOC_WCD_MBHC_ADC=y
+# CONFIG_SND_SOC_WCD_MBHC_LEGACY is not set
+CONFIG_SND_SOC_WCD_SPI=y
+CONFIG_SND_SOC_WSA881X=y
+CONFIG_SOUNDWIRE=y
+# CONFIG_SOUNDWIRE_MSTR_CTRL is not set
+CONFIG_SOUNDWIRE_WCD_CTRL=y
+# CONFIG_TX_MACRO is not set
+# CONFIG_USE_Q6_32CH_SUPPORT is not set
+# CONFIG_VA_MACRO is not set
+CONFIG_WCD9XXX_CODEC_CORE=y
+CONFIG_WCD_DSP_GLINK=y
+# CONFIG_WSA_MACRO is not set
