--- a/arch/arm64/configs/SD_defconfig
+++ b/arch/arm64/configs/SD_defconfig
@@ -371,9 +371,11 @@ CONFIG_BLK_MQ_PCI=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 # CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
 # CONFIG_DEFAULT_CFQ is not set
 CONFIG_DEFAULT_MAPLE=y
 # CONFIG_DEFAULT_NOOP is not set
